# rs-pg-maintenance-analyze

./: Cargo.toml  README.md
.sqlx/: query-78b1ed090134d5de0ee6de1ea459e04b147b12c835a82e173040cfc9a0ced772.json  query-c7db8b67f2e417af2f5817ac8290efee53362b18eb94eae6f8da3f19955dc795.json
examples/api/pg-maintenance-analyze/: Cargo.toml  example.sh  pg-maintenance-analyze  pg-maintenance-analyze.graphql
examples/api/pg-maintenance-analyze/src/: main.rs
src/: lib.rs
